Removidos itens específicos conforme solicitado

--- a/index.html
+++ b/index.html
@@ -194,7 +194,6 @@
                                 <li>Criação de OS com descrições técnicas precisas</li>
                                 <li>Atribuição de técnicos e recursos</li>
                                 <li>Registro fotográfico antes/depois</li>
-                                <li>Controle de materiais e custos</li>
                                 <li>Fechamento e documentação técnica</li>
                             </ul>
                             <div class="practical-example">
@@ -213,9 +212,6 @@
                         <div class="card-details">
                             <h4>O que você aprenderá:</h4>
                             <ul>
-                                <li>Envio de mensagens individuais e para grupos</li>
-                                <li>Confirmação de leitura e resposta</li>
-                                <li>Anexos e compartilhamento de arquivos</li>
                                 <li>Histórico de comunicações</li>
                             </ul>
                             <div class="practical-example">
@@ -234,10 +230,6 @@
                         <div class="card-details">
                             <h4>O que você aprenderá:</h4>
                             <ul>
-                                <li>Configuração de lembretes por prioridade</li>
-                                <li>Alertas para manutenções preventivas</li>
-                                <li>Sincronização com calendário corporativo</li>
-                                <li>Delegação de lembretes para equipe</li>
                             </ul>
                             <div class="practical-example">
                                 <h4>Exemplo Prático:</h4>
@@ -256,7 +248,6 @@
                             <h4>O que você aprenderá:</h4>
                             <ul>
                                 <li>Criação e atualização de registros</li>
-                                <li>Documentação contratual digitalizada</li>
                                 <li>Gestão de múltiplas unidades e filiais</li>
                                 <li>Histórico de atendimentos e solicitações</li>
                                 <li>Controle de acesso e permissões</li>
@@ -277,7 +268,6 @@
                         <div class="card-details">
                             <h4>O que você aprenderá:</h4>
                             <ul>
-                                <li>Protocolo de verificação de identidade</li>
                                 <li>Processo de reset de senha seguro</li>
                                 <li>Comunicação e documentação de procedimentos</li>
                                 <li>Auditoria de solicitações de acesso</li>
@@ -298,11 +288,8 @@
                         <div class="card-details">
                             <h4>O que você aprenderá:</h4>
                             <ul>
-                                <li>Configuração de conexões API</li>
                                 <li>Sincronização manual e automática</li>
                                 <li>Resolução de conflitos de dados</li>
-                                <li>Monitoramento de status de sincronização</li>
-                                <li>Relatórios de integridade de dados</li>
                             </ul>
                             <div class="practical-example">
                                 <h4>Exemplo Prático:</h4>
@@ -330,7 +317,7 @@
                 <div class="powerbi-card">
                     <div class="card-icon"><i class="fas fa-filter"></i></div>
                     <h3>Navegação e Filtros</h3>
-                    <p>Como navegar entre dashboards, usar filtros básicos e segmentações para encontrar exatamente as informações que você precisa.</p>
+                    <p>Como navegar entre dashboards, usar filtros básicos e segmentações para encontrar as informações que você precisa.</p>
                 </div>
                 
                 <div class="powerbi-card">
@@ -373,11 +360,11 @@
                     </div>
                     <div class="demo-item">
                         <i class="fas fa-check-circle"></i>
-                        <p>Acompanhar métricas de desempenho da equipe</p>
+                        <p>Acompanhar informações da equipe</p>
                     </div>
                     <div class="demo-item">
                         <i class="fas fa-check-circle"></i>
-                        <p>Gerar relatórios personalizados rapidamente</p>
+                        <p>Gerar relatórios rapidamente</p>
                     </div>
                     <div class="demo-item">
                         <i class="fas fa-check-circle"></i>
