Otimização para versão mobile

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Treinamento Facilities - GOWORK</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -149,7 +149,6 @@
                             <h4>O que você aprenderá:</h4>
                             <ul>
                                 <li>Navegação eficiente entre módulos</li>
-                                <li>Personalização do dashboard</li>
                                 <li>Notificações e alertas importantes</li>
                                 <li>Área de comunicados oficiais</li>
                             </ul>
